--- a/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
+++ b/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
@@ -1,41 +1,73 @@
-﻿
+﻿@model KillerApp_SE.Models.Gebruiker
+
 @{
     ViewBag.Title = "GebruikerToevoegen";
 }
 
-<form class="form-horizontal">
-    <fieldset style="margin-left: 16px;">
-        <legend style="margin-left: 166px;">Voeg een gebruiker toe</legend>
+<h2>GebruikerToevoegen</h2>
+
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Gebruiker</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            <label for="input" class="col-lg-2 control-label">Naam</label>
-            <div class="col-lg-10">
-                <input name="Naam" type="text" class="form-control" id="input" placeholder="Naam">
+            @Html.LabelFor(model => model.Ingelogd, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Ingelogd)
+                    @Html.ValidationMessageFor(model => model.Ingelogd, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
+
         <div class="form-group">
-            <label for="input" class="col-lg-2 control-label">Adres</label>
-            <div class="col-lg-10">
-                <input naam="Adres" type="text" class="form-control" id="input" placeholder="Adres">
+            @Html.LabelFor(model => model.Gebruikernaam, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Gebruikernaam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Gebruikernaam, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
-            <label for="input" class="col-lg-2 control-label">Geboortedatum</label>
-            <div class="col-lg-10">
-                <input naam="Geboortedatum" type="text" class="form-control" id="input" placeholder="YY-MM-DD">
+            @Html.LabelFor(model => model.Naam, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Naam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Naam, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
-            <label for="input" class="col-lg-2 control-label">Gebruikersnaam</label>
-            <div class="col-lg-10">
-                <input naam="Gebruikernaam" type="text" class="form-control" id="input" placeholder="Gebruikernaam">
+            @Html.LabelFor(model => model.Wachtwoord, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Wachtwoord, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
-            <label for="input" class="col-lg-2 control-label">Wachtwoord</label>
-            <div class="col-lg-10">
-                <input naam="Wachtwoord" type="text" class="form-control" id="input" placeholder="Wachtwoord">
+            @Html.LabelFor(model => model.Adres, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Adres, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Adres, "", new { @class = "text-danger" })
             </div>
         </div>
-        <a href="#" class="btn btn-success" style="margin-left: 156px;">Maak gebruiker aan</a>
-    </fieldset>
-</form>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Geboortedatum, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Geboortedatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Geboortedatum, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
