--- a/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
+++ b/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
@@ -4,25 +4,13 @@
     ViewBag.Title = "GebruikerToevoegen";
 }
 
-<h2>GebruikerToevoegen</h2>
+<h2>Gebruiker Toevoegen</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Gebruiker</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Ingelogd, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Ingelogd)
-                    @Html.ValidationMessageFor(model => model.Ingelogd, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Gebruikernaam, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -33,18 +21,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Naam, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Naam, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Naam, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.Wachtwoord, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Wachtwoord, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Naam, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Naam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Naam, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -71,3 +59,6 @@
         </div>
     </div>
 }
+<div>
+    @Html.ActionLink("Terug naar gebruikersbeheer", "GebruikerBeheren")
+</div>
