--- a/KillerApp SE/Views/Gebruikers/WijzigGegevens.cshtml
+++ b/KillerApp SE/Views/Gebruikers/WijzigGegevens.cshtml
@@ -5,15 +5,14 @@
     ViewBag.Title = "WijzigGegevens";
 }
 
-<h2>WijzigGegevens</h2>
+<h2 style="margin-left: 392px;">Wijzig gegevens gebruiker</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Gebruiker</h4>
+    <div class="form-horizontal" style="margin-left: 280px;">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -50,11 +49,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default", new { id = gebruiker.Gebruikernaam />
+                <input type="submit" value="Opslaan" class="btn btn-default", new { id = gebruiker.Gebruikernaam />
             </div>
         </div>
     </div>
 }
-<div>
+<div style="margin-top:-44px; margin-left: 521px">
     @Html.ActionLink("Terug naar gebruikersbeheer", "GebruikerBeheren")
 </div>
