--- a/KillerApp SE/Views/Inlog/Index.cshtml
+++ b/KillerApp SE/Views/Inlog/Index.cshtml
@@ -11,20 +11,26 @@
         <p>Heb je nog geen account? Vraag een account aan bij een van de medewerkers.</p>
     </center>
 </div>
-<div id="Login">
-    <form>
-        <div class="form-group" style="margin-left: 222px; margin-bottom: 15px;">
-            <label for="input" class="col-lg-2 control-label">Gebruikernaam</label>
-            <div class="col-lg-10">
-                <input name="gebruikernaam" type="text" class="form-control" id="input" placeholder="Gebruikernaam">
-            </div>
+<div style="margin-left: 145px; margin-top: -10px;" class="container">
+    <div class="form-group">
+        @Html.LabelFor(model => model.Gebruikernaam, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Gebruikernaam, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Gebruikernaam, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group" style="margin-left: 222px; margin-bottom: 15px;">
-            <label for="input" class="col-lg-2 control-label">Wachtwoord</label>
-            <div class="col-lg-10">
-                <input name="wachtwoord" type="text" class="form-control" id="input" placeholder="Wachtwoord">
-            </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Wachtwoord, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Wachtwoord, "", new { @class = "text-danger" })
         </div>
-        <p class="btn btn-success" style="margin-left: 390px; width: 100px; margin-top: 6px;"> @Html.ActionLink("Log in", "Authorise", "Inlog")</p>
-     </form>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Login" class="btn btn-default" />
+        </div>
+    </div>
 </div>
