--- a/KillerApp SE/Views/Home/Index.cshtml
+++ b/KillerApp SE/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
         <p>Met behulp van deze applicatie kun je zelf bepalen welke boeken je wilt lenen of terug wilt brengen,</p>
         <p>ook kun je binnen de catalogus zoeken naar de boeken die bij ons beschikbaar zijn.</p>
         <p>Nog geen account? Meld je bij een van de medewerkers om je te laten registreren.</p>
-        <p>Heb je al een account? Log dan @Html.ActionLink("hier", "Index", "Inlog") in</p>
+        <p>Heb je al een account? Log dan @Html.ActionLink("hier", "Login", "Inlog") in</p>
     </center>
 </div>
