--- a/KillerApp SE/Views/Home/Index.cshtml
+++ b/KillerApp SE/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@using KillerApp_SE.Models
 @{
-    ViewBag.Title = "Index";
-    
+    ViewBag.Title = "Index";   
+}
+@{
+    Bibliotheek bib = new Bibliotheek();
 }
 
 <h2 style="margin-left: 416px;">Welkom bij iBibliotheek!</h2>
