--- a/KillerApp SE/Views/Gebruikers/WijzigGegevens.cshtml
+++ b/KillerApp SE/Views/Gebruikers/WijzigGegevens.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm())
 {
+<div style="margin-left: 440px; color:palegreen"><b>@ViewBag.Message</b></div>
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal" style="margin-left: 280px;">
