--- a/KillerApp SE/Views/Shared/_Layout.cshtml
+++ b/KillerApp SE/Views/Shared/_Layout.cshtml
@@ -1,15 +1,6 @@
 ﻿@using KillerApp_SE.Models
 @{
     Bibliotheek bib = new Bibliotheek();
-
-    //public void GetGebruikernaam()
-    //{
-    //    string gebruikernaam = "";
-    //    if (Session["Gebruikernaam"] != null)
-    //    {
-    //        gebruikernaam = Session["Gebruikernaam"].ToString();
-    //    }
-    //}
 }
 
 <!DOCTYPE html>
@@ -54,7 +45,7 @@
                             {
                                 @Html.ActionLink("Mijn boeken", "MijnBoeken", "Boeken", new { area = "" }, new { @class = "navbar-brand" })
                             }
-                            @Html.ActionLink("Catalogus", "ZoekBoek", "Boeken", new { area = "" }, new { @class = "navbar-brand" })
+                            @Html.ActionLink("Catalogus", "GetBoekenLijst", "Boeken", new { area = "" }, new { @class = "navbar-brand" })
                         </ul>
                     </li>
                 </ul>
@@ -72,12 +63,6 @@
                         </li>
                     </ul>
                 }
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input style="width: 450px" type="text" class="form-control" placeholder="Zoek binnen catalogus">
-                    </div>
-                    <button type="submit" class="btn btn-default">Zoek</button>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
                     @if (Session["Gebruikernaam"] == null)
                     {
