--- a/KillerApp SE/Views/Gebruikers/WijzigMijnGegevens.cshtml
+++ b/KillerApp SE/Views/Gebruikers/WijzigMijnGegevens.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "WijzigMijnGegevens";
 }
 
-<h2 style="margin-left: 460px;">Mijn gegevens</h2>
+<h2 style="margin-left: 465px;">Mijn gegevens</h2>
 
 @using (Html.BeginForm())
 { 
-    <div style="margin-left: 440px; color:palegreen"><b>@ViewBag.Message</b></div> 
+    <div style="margin-left: 430px; color:green"><b>@ViewBag.Message</b></div> 
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal" style="margin-left: 280px;">
