--- a/KillerApp SE/Views/Boeken/GetBoekenLijst.cshtml
+++ b/KillerApp SE/Views/Boeken/GetBoekenLijst.cshtml
@@ -9,84 +9,86 @@
     Bibliotheek bib = new Bibliotheek();
 }
 
-<h2 style="margin-left: 480px">Catalogus</h2>
-<div style="margin-left: 440px; color:red"><b>@ViewBag.Message</b></div>
+<center>
+    <h2>Catalogus</h2>
+    <div style="color:red"><b>@ViewBag.Message</b></div>
 
-<form style="margin-left: 395px" class="navbar-form navbar-left" role="search">
-    <div class="form-group">
-        <input style="width: 800px;" name="ZoekTitel" type="text" class="form-control" placeholder="Search">
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Zoek" class="btn btn-default"/>
+    <form style="margin-left: 395px" class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+            <input style="width: 800px;" name="ZoekTitel" type="text" class="form-control" placeholder="Zoek binnen catalogus">
         </div>
-    </div>
-</form>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input style="width: 100px; margin-left: -30px" type="submit" value="Zoek" class="btn btn-default" />
+            </div>
+        </div>
+    </form>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Titel)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Genre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AantalBeschikbaar)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AantalExemplaren)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Auteur)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Uitgever)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var boek in (List<Boek>)ViewData["boeken"])
-    {
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => boek.Titel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => boek.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => boek.AantalBeschikbaar)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => boek.AantalExemplaren)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => boek.Auteur)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => boek.Uitgever)
-            </td>
-            <td>
-                @if (Session["Gebruikernaam"] != null)
+            <th>
+                @Html.DisplayNameFor(model => model.Titel)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Genre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AantalBeschikbaar)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AantalExemplaren)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Auteur)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Uitgever)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var boek in (List<Boek>)ViewData["boeken"])
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => boek.Titel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => boek.Genre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => boek.AantalBeschikbaar)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => boek.AantalExemplaren)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => boek.Auteur)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => boek.Uitgever)
+                </td>
+                <td>
+                    @if (Session["Gebruikernaam"] != null)
                 {
                     if (bib.GetStatus(Session["Gebruikernaam"].ToString()) == "Gebruiker")
                     {
                         if (boek.AantalBeschikbaar > 0)
                         {
-                            @Html.ActionLink("Leen boek", "LeenBoek", new { id = boek.Titel }) <br />
-                        }
-                        else
-                        {
-                        @Html.ActionLink("Niet beschikbaar", "", new { id = boek.Titel })
+                                @Html.ActionLink("Leen boek", "LeenBoek", new { id = boek.Titel }) <br />
+                            }
+                            else
+                            {
+                                @Html.ActionLink("Niet beschikbaar", "", new { id = boek.Titel })
+                            }
                         }
                     }
-                }
-                else
-                {
-                    @Html.ActionLink("Log in om te lenen", "login", "Inlog")
-                }
-            </td>
-        </tr>
-    }
-</table>
+                    else
+                    {
+                        @Html.ActionLink("Log in om te lenen", "login", "Inlog")
+                    }
+                </td>
+            </tr>
+        }
+    </table>
+</center>
