--- a/KillerApp SE/Views/Boeken/MijnBoeken.cshtml
+++ b/KillerApp SE/Views/Boeken/MijnBoeken.cshtml
@@ -10,7 +10,7 @@
 }
 
 <h2 style="margin-left: 440px">Mijn boeken</h2>
-
+<div style="margin-left: 430px; color:green"><b>@ViewBag.Message</b></div>
 <table class="table">
     <tr>
         <th>
