--- a/KillerApp SE/Views/Gebruikers/WijzigGegevens.cshtml
+++ b/KillerApp SE/Views/Gebruikers/WijzigGegevens.cshtml
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 {
-<div style="margin-left: 440px; color:palegreen"><b>@ViewBag.Message</b></div>
+    <div style="margin-left: 430px; color:green"><b>@ViewBag.Message</b></div>
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal" style="margin-left: 280px;">
@@ -55,6 +55,4 @@
         </div>
     </div>
 }
-<div style="margin-top:-44px; margin-left: 521px">
     @Html.ActionLink("Terug naar gebruikersbeheer", "GebruikerBeheren")
-</div>
