1e Volledige Versie waarin alles werkt en netjes eruitziet

--- a/KillerApp SE/Content/Style.css
+++ b/KillerApp SE/Content/Style.css
@@ -2561,7 +2561,7 @@ output {
   font-size: 14px;
   line-height: 1.42857143;
   color: #272b30;
-  background-color: #ffffff;
+  background-color: #DF5F5F;
   background-image: none;
   border: 1px solid #000000;
   border-radius: 4px;
