--- a/KillerApp SE/Views/Boeken/MijnBoeken.cshtml
+++ b/KillerApp SE/Views/Boeken/MijnBoeken.cshtml
@@ -9,8 +9,8 @@
     Bibliotheek bib = new Bibliotheek();
 }
 
-<h2 style="margin-left: 440px">Mijn boeken</h2>
-<div style="margin-left: 430px; color:green"><b>@ViewBag.Message</b></div>
+<center><h2>Mijn boeken</h2></center>
+<center><div style="color:green"><b>@ViewBag.Message</b></div></center>
 <table class="table">
     <tr>
         <th>
