--- a/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
+++ b/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "GebruikerToevoegen";
 }
 
-<h2 style="margin-left: 425px;">Gebruiker Toevoegen</h2>
+<h2 style="margin-left: 425px; margin-bottom: 50px">Gebruiker Toevoegen</h2>
 
 @using (Html.BeginForm())
 {
